--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Reddit Clone
-
+Section 1 (Functionality of App)
   - User Accounts with Secure Authentication
     -
     -
@@ -16,3 +16,10 @@ Reddit Clone
     -
     -
     
+Section 2 (To-Do List)
+
+Section 3 (Own Ideas)
+
+Section 4 (Documentation)
+- Flask (https://flask.palletsprojects.com/en/2.0.x/)
+- Oauth (https://oauth.net/2/)
