--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Speak
 Section 1 (Functionality of App)
   - User Accounts with Secure Authentication
-    - [X] User's have to login with a password
+    - User's have to login with a password
     - (Security Stuff)
   - Users to see all users who are currently logged in
     - Users can see all current users on the server
