--- a/README
+++ b/README
@@ -41,8 +41,7 @@ Section 4 (Documentation)
     - Request()
     - Render_template
     - Flask Socket IO
-    - Redirect()
-    - Url_for()
+    - Redirect()/Url_for()
   - PyMongo
   - Cloudinary
   - Dotenv
